cli/tests/snapshot/inputs/errors/caller_contract_violation.ncl
# capture = 'stderr'
# command = []
std.array.map std.function.id 'not-an-array

